@@ -98,11 +98,17 @@ int dom_node_node_name_read(dom_object *obj, zval *retval)
 		}
 		case XML_DOCUMENT_TYPE_NODE:
 		case XML_DTD_NODE:
+			if (nodep->name) {
+				ZVAL_STRING(retval, (const char *) nodep->name);
+			} else {
+				ZVAL_EMPTY_STRING(retval);
+			}
+			break;
 		case XML_PI_NODE:
 		case XML_ENTITY_DECL:
 		case XML_ENTITY_REF_NODE:
 		case XML_NOTATION_NODE:
-			ZVAL_STRING(retval, (char *) nodep->name);
+			ZVAL_STRING(retval, (const char *) nodep->name);
 			break;
 		case XML_CDATA_SECTION_NODE:
 			ZVAL_STRING(retval, "#cdata-section");
